# tgoban

./: .gitignore  Cargo.toml
electron/: build.sh  index.js  package.json
electron/rust/: Cargo.toml  webpack.config.js
electron/rust/src/: board.rs  lib.rs  prelude.rs
electron/rust/www/: index.html  index.js  package-lock.json  package.json
go_board/: Cargo.toml
go_board/src/: lib.rs
go_game_engine/: Cargo.toml
go_game_engine/src/: board.rs  lib.rs  link.rs  scoring_board.rs  tree.rs
go_game_engine/src/board/: go_board.rs  mod.rs  scoring_board.rs
gui_client/: Cargo.toml
gui_client/src/: board.rs  game.rs  game_info.rs  main.rs
httpd/: Cargo.toml
httpd/src/: main.rs  protocol.rs
src/: go_board.rs  lib.rs  main.rs
text_client/: Cargo.toml
text_client/src/: main.rs
tgoban_gtp/: Cargo.toml
tgoban_gtp/src/: command.rs  lib.rs
tgoban_iced_frontend/: Cargo.toml
tgoban_iced_frontend/src/: main.rs
tgoban_iced_frontend/src/widgets/: board.rs
tgoban_sdl_frontend/: Cargo.toml
tgoban_sdl_frontend/src/: main.rs
tgoban_sdl_frontend/src/components/: board.rs  mod.rs
tgoban_ws_adapter/: Cargo.toml
tgoban_ws_adapter/src/: command_adapter.rs  go_game_task.rs  lib.rs  main.rs  ws_task.rs
tgoban_ws_adapter/src/arbitator/: adaptor.rs  arbitator.rs  async_adaptor.rs  command_adaptor.rs  mod.rs  ws_adaptor.rs
tgoban_ws_adapter/src/gtp/: command.rs  mod.rs
tgoban_ws_protocol/: Cargo.toml
tgoban_ws_protocol/src/: lib.rs
