#[package]
#name = "go-game"
#version = "0.1.0"
#authors = ["Tzu-Te Yu <tedyu002@gmail.com>"]
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"go_game_engine",
	"tgoban_ws_adapter",
	"tgoban_gtp",
	"electron/rust",
	"tgoban_iced_frontend",
]
