[package]
name = "httpd"
version = "0.1.0"
authors = ["Tzu-Te Yu <tedyu002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-web-actors = "2.0.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
go_game_engine = { path = "../go_game_engine" }
