[package]
name = "tgoban_ws_adapter"
version = "0.1.0"
authors = ["Tzu-Te Yu <tedyu002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
go_game_engine = { path = "../go_game_engine" }
tgoban_ws_protocol = { path = "../tgoban_ws_protocol" }
