[package]
name = "tgoban_ws_adapter"
version = "0.1.0"
authors = ["Tzu-Te Yu <tedyu002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.5"
tokio = { version = "0.2", features = ['rt-core', 'rt-threaded', 'sync', 'macros', 'process', 'io-util'] }
tungstenite = "0.11"
tokio-tungstenite = "0.11"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
go_game_engine = { path = "../go_game_engine" }
tgoban_ws_protocol = { path = "../tgoban_ws_protocol" }
