[package]
name = "rust"
version = "0.1.0"
authors = ["Tzu-Te Yu <tedyu002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'Window',
	'Document',
	'Element',
	'HtmlBodyElement',
	'DomRect',
	'SvgRectElement',
	'SvgElement',
	'Window',
	'Node',
	'Text',
	'Event',
	'EventTarget',
	'MouseEvent',
	'DomRect',
	'WebSocket',
	'MessageEvent',
	'HtmlCollection',
]
